# mandelbrot

./: CMakeLists.txt  Main.cpp  Main_basic.cpp  README.md
